Bug: 485843 Reviewer: Peter Comment: fix format of insert page to not cut off browse button

--- a/trunk/ssf/web/docroot/js/tiny_mce/plugins/ss_addimage/css/ss_addimage.css
+++ b/trunk/ssf/web/docroot/js/tiny_mce/plugins/ss_addimage/css/ss_addimage.css
@@ -66,7 +66,6 @@
 }
 
 #inputFile {
-	width: 300px;
 }
 
 #constrain, #onmousemovecheck {
